--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,7 @@
     "compatibility_date": "2026-01-02",
     "assets": {
         "directory": "./dist",
+        "html_handling": "auto-trailing-slash",
+        "not_found_handling": "single-page-application",
     },
 }
