--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
     "format": "prettier --write --experimental-cli src/",
-    "deploy": "pnpm build && gh-pages -d dist"
+    "deploy": "pnpm run build && npx wrangler deploy"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
